# Natron

./: .gitignore  global.pri  libs.pri  meson.build
App/: NatronApp_main.cpp  meson.build
CrashReporter/: CallbacksManager.cpp
Engine/: AbortableRenderInfo.cpp  AbortableRenderInfo.h  AfterQuitProcessingI.h  AppInstance.cpp  AppInstance.h  AppManager.cpp  AppManager.h  AppManagerPrivate.cpp  AppManagerPrivate.h  Backdrop.cpp  Backdrop.h  Bezier.cpp  Bezier.h  BezierCP.cpp  BezierCP.h  BezierCPPrivate.h  BezierCPSerialization.h  BezierSerialization.h  BlockingBackgroundRender.cpp  BlockingBackgroundRender.h  BufferableObject.h  CLArgs.cpp  CLArgs.h  Cache.cpp  Cache.h  CacheEntry.h  CacheEntryHolder.h  CacheSerialization.h  ChoiceOption.h  CoonsRegularization.cpp  CoonsRegularization.h  CreateNodeArgs.cpp  CreateNodeArgs.h  Curve.cpp  Curve.h  CurvePrivate.h  CurveSerialization.cpp  CurveSerialization.h  DefaultShaders.cpp  DefaultShaders.h  (+277 more)
Engine/NatronEngine/: animatedparam_wrapper.cpp  animatedparam_wrapper.h  app_wrapper.cpp  app_wrapper.h  appsettings_wrapper.cpp  beziercurve_wrapper.cpp  beziercurve_wrapper.h  booleanparam_wrapper.cpp  booleanparam_wrapper.h  boolnodecreationproperty_wrapper.cpp  boolnodecreationproperty_wrapper.h  buttonparam_wrapper.cpp  buttonparam_wrapper.h  choiceparam_wrapper.cpp  choiceparam_wrapper.h  colorparam_wrapper.cpp  colorparam_wrapper.h  colortuple_wrapper.cpp  double2dparam_wrapper.cpp  double2dparam_wrapper.h  double2dtuple_wrapper.cpp  double3dparam_wrapper.cpp  double3dparam_wrapper.h  double3dtuple_wrapper.cpp  doubleparam_wrapper.cpp  doubleparam_wrapper.h  effect_wrapper.cpp  effect_wrapper.h  exprutils_wrapper.cpp  fileparam_wrapper.cpp  fileparam_wrapper.h  floatnodecreationproperty_wrapper.cpp  floatnodecreationproperty_wrapper.h  group_wrapper.cpp  group_wrapper.h  groupparam_wrapper.cpp  groupparam_wrapper.h  imagelayer_wrapper.cpp  int2dparam_wrapper.cpp  int2dparam_wrapper.h  (+47 more)
Engine/NatronEngine_Qt5/: natron_python_animatedparam_wrapper.cpp  natron_python_animatedparam_wrapper.h  natron_python_app_wrapper.cpp  natron_python_app_wrapper.h  natron_python_appsettings_wrapper.cpp  natron_python_appsettings_wrapper.h  natron_python_beziercurve_wrapper.cpp  natron_python_beziercurve_wrapper.h  natron_python_booleanparam_wrapper.cpp  natron_python_booleanparam_wrapper.h  natron_python_boolnodecreationproperty_wrapper.cpp  natron_python_boolnodecreationproperty_wrapper.h  natron_python_buttonparam_wrapper.cpp  natron_python_buttonparam_wrapper.h  natron_python_choiceparam_wrapper.cpp  natron_python_choiceparam_wrapper.h  natron_python_colorparam_wrapper.cpp  natron_python_colorparam_wrapper.h  natron_python_colortuple_wrapper.cpp  natron_python_colortuple_wrapper.h  natron_python_double2dparam_wrapper.cpp  natron_python_double2dparam_wrapper.h  natron_python_double2dtuple_wrapper.cpp  natron_python_double2dtuple_wrapper.h  natron_python_double3dparam_wrapper.cpp  natron_python_double3dparam_wrapper.h  natron_python_double3dtuple_wrapper.cpp  natron_python_double3dtuple_wrapper.h  natron_python_doubleparam_wrapper.cpp  natron_python_doubleparam_wrapper.h  natron_python_effect_wrapper.cpp  natron_python_effect_wrapper.h  natron_python_exprutils_wrapper.cpp  natron_python_exprutils_wrapper.h  natron_python_fileparam_wrapper.cpp  natron_python_fileparam_wrapper.h  natron_python_floatnodecreationproperty_wrapper.cpp  natron_python_floatnodecreationproperty_wrapper.h  natron_python_group_wrapper.cpp  natron_python_group_wrapper.h  (+70 more)
Global/: Enums.h  FStreamsSupport.cpp  FStreamsSupport.h  GlobalDefines.h  KeySymbols.h  Macros.h  ProcInfo.cpp  ProcInfo.h  PythonUtils.cpp  PythonUtils.h  QtCompat.h  StrUtils.cpp  StrUtils.h  fstream_mingw.h
Gui/: AboutWindow.cpp  AboutWindow.h  ActionShortcuts.cpp  ActionShortcuts.h  AddKnobDialog.cpp  AddKnobDialog.h  AnimatedCheckBox.cpp  AnimatedCheckBox.h  AnimationModuleEditor.h  AnimationModuleView.cpp  AutoHideToolBar.cpp  AutoHideToolBar.h  BackdropGui.cpp  BackdropGui.h  Button.cpp  Button.h  ChannelsComboBox.cpp  ChannelsComboBox.h  ClickableLabel.cpp  ClickableLabel.h  ColoredFrame.cpp  ColoredFrame.h  ComboBox.cpp  ComboBox.h  CurveEditor.cpp  CurveEditor.h  CurveEditorUndoRedo.cpp  CurveEditorUndoRedo.h  CurveGui.cpp  CurveGui.h  CurveSelection.h  CurveWidget.cpp  CurveWidget.h  CurveWidgetDialogs.cpp  CurveWidgetDialogs.h  CurveWidgetPrivate.cpp  CurveWidgetPrivate.h  CustomParamInteract.cpp  CustomParamInteract.h  DialogButtonBox.cpp  (+244 more)
Gui/NatronGui/: guiapp_wrapper.cpp  guiapp_wrapper.h  natrongui_module_wrapper.cpp  natrongui_python.h  pyguiapplication_wrapper.cpp  pyguiapplication_wrapper.h  pymodaldialog_wrapper.cpp  pymodaldialog_wrapper.h  pypanel_wrapper.cpp  pypanel_wrapper.h  pytabwidget_wrapper.cpp  pyviewer_wrapper.cpp
Gui/NatronGui_Qt5/: natron_python_guiapp_wrapper.cpp  natron_python_guiapp_wrapper.h  natron_python_pyguiapplication_wrapper.cpp  natron_python_pyguiapplication_wrapper.h  natron_python_pymodaldialog_wrapper.cpp  natron_python_pymodaldialog_wrapper.h  natron_python_pypanel_wrapper.cpp  natron_python_pypanel_wrapper.h  natron_python_pytabwidget_wrapper.cpp  natron_python_pytabwidget_wrapper.h  natrongui_module_wrapper.cpp  natrongui_python.h
Natron-Deps/: bootstrap
Natron-Deps/src/: README  main.mak
PythonBin/: meson.build  python_main.cpp
Renderer/: NatronRenderer_main.cpp
Serialization/: SerializationFwd.h
Tests/: BaseTest.cpp  BaseTest.h  Curve_Test.cpp  Hash64_Test.cpp  Image_Test.cpp  KnobFile_Test.cpp  Lut_Test.cpp  Tracker_Test.cpp  wmain.cpp
libs/: meson.build
libs/ceres/: meson.build
libs/gflags/: meson.build
libs/glog/: meson.build
libs/hoedown/: hoedown.pro  meson.build
libs/libmv/: meson.build
libs/libtess/: meson.build
libs/openMVG/: meson.build
libs/qhttpserver/: meson.build
libs/qhttpserver/src/: src.pro
tools/docker/: Dockerfile.builder-qt5  Dockerfile.builder-qt5-fedora30  Dockerfile.centos6-qt4  Dockerfile.fedora29  packageNatron.sh
tools/jenkins/: common.sh  compiler-common.sh
tools/utils/: runPostShiboken2.sh  (+1 more)
(+49 files in other folders)
