################################################################################
## Engine
################################################################################

sources = [
  'AbortableRenderInfo.cpp',
  'AppInstance.cpp',
  'AppManager.cpp',
  'AppManagerPrivate.cpp',
  'Backdrop.cpp',
  'Bezier.cpp',
  'BezierCP.cpp',
  'BlockingBackgroundRender.cpp',
  'CLArgs.cpp',
  'Cache.cpp',
  'CoonsRegularization.cpp',
  'CreateNodeArgs.cpp',
  'Curve.cpp',
  'CurveSerialization.cpp',
  'DefaultShaders.cpp',
  'DiskCacheNode.cpp',
  'Dot.cpp',
  'EffectInstance.cpp',
  'EffectInstancePrivate.cpp',
  'EffectInstanceRenderRoI.cpp',
  'ExistenceCheckThread.cpp',
  'FileDownloader.cpp',
  'FileSystemModel.cpp',
  'FitCurve.cpp',
  'FrameEntry.cpp',
  'FrameKey.cpp',
  'FrameParamsSerialization.cpp',
  'GLShader.cpp',
  'GPUContextPool.cpp',
  'GenericSchedulerThread.cpp',
  'GenericSchedulerThreadWatcher.cpp',
  'GroupInput.cpp',
  'GroupOutput.cpp',
  'Hash64.cpp',
  'HistogramCPU.cpp',
  'HostOverlaySupport.cpp',
  'Image.cpp',
  'ImageConvert.cpp',
  'ImageCopyChannels.cpp',
  'ImageKey.cpp',
  'ImageMaskMix.cpp',
  'ImageParamsSerialization.cpp',
  'ImagePlaneDesc.cpp',
  'Interpolation.cpp',
  'JoinViewsNode.cpp',
  'Knob.cpp',
  'KnobFactory.cpp',
  'KnobFile.cpp',
  'KnobSerialization.cpp',
  'KnobTypes.cpp',
  'LibraryBinary.cpp',
  'Log.cpp',
  'Lut.cpp',
  'Markdown.cpp',
  'MemoryFile.cpp',
  'MemoryInfo.cpp',
  'NoOpBase.cpp',
  'Node.cpp',
  'NodeDocumentation.cpp',
  'NodeGroup.cpp',
  'NodeGroupSerialization.cpp',
  'NodeInputs.cpp',
  'NodeMain.cpp',
  'NodeMetadata.cpp',
  'NodeName.cpp',
  'NodeOverlay.cpp',
  'NodeSerialization.cpp',
  'Noise.cpp',
  'NonKeyParams.cpp',
  'NonKeyParamsSerialization.cpp',
  'OSGLContext.cpp',
  'OSGLContext_mac.cpp',
  'OSGLContext_win.cpp',
  'OSGLContext_x11.cpp',
  'OfxClipInstance.cpp',
  'OfxEffectInstance.cpp',
  'OfxHost.cpp',
  'OfxImageEffectInstance.cpp',
  'OfxMemory.cpp',
  'OfxOverlayInteract.cpp',
  'OfxParamInstance.cpp',
  'OneViewNode.cpp',
  'OutputEffectInstance.cpp',
  'OutputSchedulerThread.cpp',
  'ParallelRenderArgs.cpp',
  'Plugin.cpp',
  'PluginMemory.cpp',
  'PrecompNode.cpp',
  'ProcessHandler.cpp',
  'Project.cpp',
  'ProjectPrivate.cpp',
  'ProjectSerialization.cpp',
  'PyAppInstance.cpp',
  'PyExprUtils.cpp',
  'PyNode.cpp',
  'PyNodeGroup.cpp',
  'PyParameter.cpp',
  'PyRoto.cpp',
  'PySideCompat.cpp',
  'PyTracker.cpp',
  'ReadNode.cpp',
  'RectD.cpp',
  'RectI.cpp',
  'RenderStats.cpp',
  'RotoContext.cpp',
  'RotoDrawableItem.cpp',
  'RotoItem.cpp',
  'RotoLayer.cpp',
  'RotoPaint.cpp',
  'RotoPaintInteract.cpp',
  'RotoSmear.cpp',
  'RotoStrokeItem.cpp',
  'RotoUndoCommand.cpp',
  'ScriptObject.cpp',
  'Settings.cpp',
  'Smooth1D.cpp',
  'StandardPaths.cpp',
  'StringAnimationManager.cpp',
  'TLSHolder.cpp',
  'Texture.cpp',
  'TextureRect.cpp',
  'ThreadPool.cpp',
  'TimeLine.cpp',
  'Timer.cpp',
  'TrackMarker.cpp',
  'TrackerContext.cpp',
  'TrackerContextPrivate.cpp',
  'TrackerFrameAccessor.cpp',
  'TrackerNode.cpp',
  'TrackerNodeInteract.cpp',
  'TrackerUndoCommand.cpp',
  'Transform.cpp',
  'Utils.cpp',
  'ViewerInstance.cpp',
  'WriteNode.cpp',
]

# Generated by shiboken
sources += [
  'NatronEngine/animatedparam_wrapper.cpp',
  'NatronEngine/app_wrapper.cpp',
  'NatronEngine/appsettings_wrapper.cpp',
  'NatronEngine/beziercurve_wrapper.cpp',
  'NatronEngine/booleanparam_wrapper.cpp',
  'NatronEngine/boolnodecreationproperty_wrapper.cpp',
  'NatronEngine/buttonparam_wrapper.cpp',
  'NatronEngine/choiceparam_wrapper.cpp',
  'NatronEngine/colorparam_wrapper.cpp',
  'NatronEngine/colortuple_wrapper.cpp',
  'NatronEngine/double2dparam_wrapper.cpp',
  'NatronEngine/double2dtuple_wrapper.cpp',
  'NatronEngine/double3dparam_wrapper.cpp',
  'NatronEngine/double3dtuple_wrapper.cpp',
  'NatronEngine/doubleparam_wrapper.cpp',
  'NatronEngine/effect_wrapper.cpp',
  'NatronEngine/exprutils_wrapper.cpp',
  'NatronEngine/fileparam_wrapper.cpp',
  'NatronEngine/floatnodecreationproperty_wrapper.cpp',
  'NatronEngine/group_wrapper.cpp',
  'NatronEngine/groupparam_wrapper.cpp',
  'NatronEngine/imagelayer_wrapper.cpp',
  'NatronEngine/int2dparam_wrapper.cpp',
  'NatronEngine/int2dtuple_wrapper.cpp',
  'NatronEngine/int3dparam_wrapper.cpp',
  'NatronEngine/int3dtuple_wrapper.cpp',
  'NatronEngine/intnodecreationproperty_wrapper.cpp',
  'NatronEngine/intparam_wrapper.cpp',
  'NatronEngine/itembase_wrapper.cpp',
  'NatronEngine/layer_wrapper.cpp',
  'NatronEngine/natron_namespace_wrapper.cpp',
  'NatronEngine/natronengine_module_wrapper.cpp',
  'NatronEngine/nodecreationproperty_wrapper.cpp',
  'NatronEngine/outputfileparam_wrapper.cpp',
  'NatronEngine/pageparam_wrapper.cpp',
  'NatronEngine/param_wrapper.cpp',
  'NatronEngine/parametricparam_wrapper.cpp',
  'NatronEngine/pathparam_wrapper.cpp',
  'NatronEngine/pycoreapplication_wrapper.cpp',
  'NatronEngine/rectd_wrapper.cpp',
  'NatronEngine/recti_wrapper.cpp',
  'NatronEngine/roto_wrapper.cpp',
  'NatronEngine/separatorparam_wrapper.cpp',
  'NatronEngine/stringnodecreationproperty_wrapper.cpp',
  'NatronEngine/stringparam_wrapper.cpp',
  'NatronEngine/stringparambase_wrapper.cpp',
  'NatronEngine/track_wrapper.cpp',
  'NatronEngine/tracker_wrapper.cpp',
  'NatronEngine/userparamholder_wrapper.cpp',
]

# TODO: to be moved
sources += [
  '../Global/FStreamsSupport.cpp',
  '../Global/ProcInfo.cpp',
  '../Global/StrUtils.cpp',
  '../Global/glad_source.c',
  '../libs/SequenceParsing/SequenceParsing.cpp',
]

moc_headers = [
  'AbortableRenderInfo.h',
  'AfterQuitProcessingI.h',
  'AppInstance.h',
  'AppManager.h',
  'AppManagerPrivate.h',
  'Backdrop.h',
  'Bezier.h',
  'BezierCP.h',
  'BezierCPPrivate.h',
  'BezierCPSerialization.h',
  'BezierSerialization.h',
  'BlockingBackgroundRender.h',
  'BufferableObject.h',
  'CLArgs.h',
  'Cache.h',
  'CacheEntry.h',
  'CacheEntryHolder.h',
  'CacheSerialization.h',
  'ChoiceOption.h',
  'CoonsRegularization.h',
  'CreateNodeArgs.h',
  'Curve.h',
  'CurvePrivate.h',
  'CurveSerialization.h',
  'DefaultShaders.h',
  'DiskCacheNode.h',
  'DockablePanelI.h',
  'Dot.h',
  'EffectInstance.h',
  'EffectInstancePrivate.h',
  'EngineFwd.h',
  'ExistenceCheckThread.h',
  'FeatherPoint.h',
  'FileDownloader.h',
  'FileSystemModel.h',
  'FitCurve.h',
  'Format.h',
  'FormatSerialization.h',
  'FrameEntry.h',
  'FrameEntrySerialization.h',
  'FrameKey.h',
  'FrameParams.h',
  'FrameParamsSerialization.h',
  'GLShader.h',
  'GPUContextPool.h',
  'GenericSchedulerThread.h',
  'GenericSchedulerThreadWatcher.h',
  'GroupInput.h',
  'GroupOutput.h',
  'Hash64.h',
  'HistogramCPU.h',
  'HostOverlaySupport.h',
  'Image.h',
  'ImageKey.h',
  'ImageLocker.h',
  'ImageParams.h',
  'ImageParamsSerialization.h',
  'ImagePlaneDesc.h',
  'ImageSerialization.h',
  'Interpolation.h',
  'JoinViewsNode.h',
  'KeyHelper.h',
  'Knob.h',
  'KnobFactory.h',
  'KnobFile.h',
  'KnobGuiI.h',
  'KnobImpl.h',
  'KnobSerialization.h',
  'KnobTypes.h',
  'LRUHashTable.h',
  'LibraryBinary.h',
  'Log.h',
  'LogEntry.h',
  'Lut.h',
  'Markdown.h',
  'MemoryFile.h',
  'MemoryInfo.h',
  'MergingEnum.h',
  'NoOpBase.h',
  'Node.h',
  'NodeGraphI.h',
  'NodeGroup.h',
  'NodeGroupSerialization.h',
  'NodeGuiI.h',
  'NodeMetadata.h',
  'NodePrivate.h',
  'NodeSerialization.h',
  'Noise.h',
  'NoiseTables.h',
  'NonKeyParams.h',
  'NonKeyParamsSerialization.h',
  'OSGLContext.h',
  'OSGLContext_mac.h',
  'OSGLContext_win.h',
  'OSGLContext_x11.h',
  'OfxClipInstance.h',
  'OfxEffectInstance.h',
  'OfxHost.h',
  'OfxImageEffectInstance.h',
  'OfxMemory.h',
  'OfxOverlayInteract.h',
  'OfxParamInstance.h',
  'OneViewNode.h',
  'OpenGLViewerI.h',
  'OutputEffectInstance.h',
  'OutputSchedulerThread.h',
  'OverlaySupport.h',
  'ParallelRenderArgs.h',
  'Plugin.h',
  'PluginActionShortcut.h',
  'PluginMemory.h',
  'PrecompNode.h',
  'ProcessHandler.h',
  'Project.h',
  'ProjectPrivate.h',
  'ProjectSerialization.h',
  'PyAppInstance.h',
  'PyExprUtils.h',
  'PyGlobalFunctions.h',
  'PyNode.h',
  'PyNodeGroup.h',
  'PyParameter.h',
  'PyRoto.h',
  'PyTracker.h',
  'Pyside_Engine_Python.h',
  'ReadNode.h',
  'RectD.h',
  'RectDSerialization.h',
  'RectI.h',
  'RectISerialization.h',
  'RenderStats.h',
  'RotoContext.h',
  'RotoContextPrivate.h',
  'RotoContextSerialization.h',
  'RotoDrawableItem.h',
  'RotoDrawableItemSerialization.h',
  'RotoItem.h',
  'RotoItemSerialization.h',
  'RotoLayer.h',
  'RotoLayerSerialization.h',
  'RotoPaint.h',
  'RotoPaintInteract.h',
  'RotoPoint.h',
  'RotoSmear.h',
  'RotoStrokeItem.h',
  'RotoStrokeItemSerialization.h',
  'RotoUndoCommand.h',
  'ScriptObject.h',
  'Settings.h',
  'Singleton.h',
  'Smooth1D.h',
  'StandardPaths.h',
  'StringAnimationManager.h',
  'TLSHolder.h',
  'TLSHolderImpl.h',
  'Texture.h',
  'TextureRect.h',
  'TextureRectSerialization.h',
  'ThreadPool.h',
  'ThreadStorage.h',
  'TimeLine.h',
  'TimeLineKeyFrames.h',
  'Timer.h',
  'TrackMarker.h',
  'TrackerContext.h',
  'TrackerContextPrivate.h',
  'TrackerFrameAccessor.h',
  'TrackerNode.h',
  'TrackerNodeInteract.h',
  'TrackerSerialization.h',
  'TrackerUndoCommand.h',
  'Transform.h',
  'UndoCommand.h',
  'UpdateViewerParams.h',
  'Utils.h',
  'Variant.h',
  'VariantSerialization.h',
  'ViewIdx.h',
  'ViewerInstance.h',
  'ViewerInstancePrivate.h',
  'WriteNode.h',
  'fstream_mingw.h',
]

incs += include_directories('../Global/gladRel/include')

engine_gen = qt4.preprocess(
  moc_headers: moc_headers,
  moc_extra_arguments: global_defines,
  include_directories: incs,
  dependencies: [qt4_dep, boost_dep])

engine_lib = static_library('engine',
							sources,
							engine_gen,
							include_directories: incs,
							dependencies: [python_dep,
										   shiboken_dep,
										   pyside_dep,
										   qt4_dep,
										   qhttpserver_dep,
										   libmv_dep,
										   openmvg_dep,
										   hoedown_dep,
										   libtess_dep])

Engine_dep = declare_dependency(link_with: engine_lib)
