################################################################################
## Gui
################################################################################

sources = [
  'AboutWindow.cpp',
  'ActionShortcuts.cpp',
  'AddKnobDialog.cpp',
  'AnimatedCheckBox.cpp',
  'AutoHideToolBar.cpp',
  'BackdropGui.cpp',
  'Button.cpp',
  'ChannelsComboBox.cpp',
  'ClickableLabel.cpp',
  'ColoredFrame.cpp',
  'ComboBox.cpp',
  'CurveEditor.cpp',
  'CurveEditorUndoRedo.cpp',
  'CurveGui.cpp',
  'CurveWidget.cpp',
  'CurveWidgetDialogs.cpp',
  'CurveWidgetPrivate.cpp',
  'CustomParamInteract.cpp',
  'DialogButtonBox.cpp',
  'DockablePanel.cpp',
  'DockablePanelPrivate.cpp',
  'DockablePanelTabWidget.cpp',
  'DocumentationManager.cpp',
  'DopeSheet.cpp',
  'DopeSheetEditor.cpp',
  'DopeSheetEditorUndoRedo.cpp',
  'DopeSheetHierarchyView.cpp',
  'DopeSheetView.cpp',
  'DotGui.cpp',
  'Edge.cpp',
  'EditExpressionDialog.cpp',
  'EditScriptDialog.cpp',
  'ExportGroupTemplateDialog.cpp',
  'FileTypeMainWindow_win.cpp',
  'FloatingWidget.cpp',
  'GroupBoxLabel.cpp',
  'Gui.cpp',
  'Gui05.cpp',
  'Gui10.cpp',
  'Gui15.cpp',
  'Gui20.cpp',
  'Gui30.cpp',
  'Gui40.cpp',
  'Gui50.cpp',
  'GuiAppInstance.cpp',
  'GuiApplicationManager.cpp',
  'GuiApplicationManager10.cpp',
  'GuiApplicationManagerPrivate.cpp',
  'GuiPrivate.cpp',
  'Histogram.cpp',
  'HostOverlay.cpp',
  'InfoViewerWidget.cpp',
  'KnobGui.cpp',
  'KnobGui10.cpp',
  'KnobGui20.cpp',
  'KnobGuiBool.cpp',
  'KnobGuiButton.cpp',
  'KnobGuiChoice.cpp',
  'KnobGuiColor.cpp',
  'KnobGuiContainerHelper.cpp',
  'KnobGuiFactory.cpp',
  'KnobGuiFile.cpp',
  'KnobGuiGroup.cpp',
  'KnobGuiParametric.cpp',
  'KnobGuiPrivate.cpp',
  'KnobGuiSeparator.cpp',
  'KnobGuiString.cpp',
  'KnobGuiTable.cpp',
  'KnobGuiValue.cpp',
  'KnobUndoCommand.cpp',
  'KnobWidgetDnD.cpp',
  'Label.cpp',
  'LineEdit.cpp',
  'LinkToKnobDialog.cpp',
  'LogWindow.cpp',
  'ManageUserParamsDialog.cpp',
  'Menu.cpp',
  'MessageBox.cpp',
  'MultiInstancePanel.cpp',
  'NewLayerDialog.cpp',
  'NodeBackdropSerialization.cpp',
  'NodeCreationDialog.cpp',
  'NodeGraph.cpp',
  'NodeGraph05.cpp',
  'NodeGraph10.cpp',
  'NodeGraph13.cpp',
  'NodeGraph15.cpp',
  'NodeGraph20.cpp',
  'NodeGraph25.cpp',
  'NodeGraph30.cpp',
  'NodeGraph35.cpp',
  'NodeGraph40.cpp',
  'NodeGraph45.cpp',
  'NodeGraphPrivate.cpp',
  'NodeGraphPrivate10.cpp',
  'NodeGraphRectItem.cpp',
  'NodeGraphTextItem.cpp',
  'NodeGraphUndoRedo.cpp',
  'NodeGui.cpp',
  'NodeGuiSerialization.cpp',
  'NodeSettingsPanel.cpp',
  'NodeViewerContext.cpp',
  'PanelWidget.cpp',
  'PickKnobDialog.cpp',
  'PreferencesPanel.cpp',
  'PreviewThread.cpp',
  'ProgressPanel.cpp',
  'ProgressTaskInfo.cpp',
  'ProjectGui.cpp',
  'ProjectGuiSerialization.cpp',
  'PropertiesBinWrapper.cpp',
  'PyGuiApp.cpp',
  'PythonPanels.cpp',
  'QtEnumConvert.cpp',
  'RenderStatsDialog.cpp',
  'ResizableMessageBox.cpp',
  'RightClickableWidget.cpp',
  'RotoPanel.cpp',
  'ScaleSliderQWidget.cpp',
  'ScriptEditor.cpp',
  'ScriptTextEdit.cpp',
  'SequenceFileDialog.cpp',
  'SerializableWindow.cpp',
  'Shaders.cpp',
  'SpinBox.cpp',
  'SpinBoxValidator.cpp',
  'SplashScreen.cpp',
  'Splitter.cpp',
  'TabGroup.cpp',
  'TabWidget.cpp',
  'TableModelView.cpp',
  'TextRenderer.cpp',
  'TimeLineGui.cpp',
  'ToolButton.cpp',
  'TrackerPanel.cpp',
  'VerticalColorBar.cpp',
  'ViewerGL.cpp',
  'ViewerGLPrivate.cpp',
  'ViewerTab.cpp',
  'ViewerTab10.cpp',
  'ViewerTab20.cpp',
  'ViewerTab30.cpp',
  'ViewerTab40.cpp',
  'ViewerTabPrivate.cpp',
  'ViewerToolButton.cpp',
  'ticks.cpp',
]

sources += [
  'NatronGui/guiapp_wrapper.cpp',
  'NatronGui/natrongui_module_wrapper.cpp',
  'NatronGui/pyguiapplication_wrapper.cpp',
  'NatronGui/pymodaldialog_wrapper.cpp',
  'NatronGui/pypanel_wrapper.cpp',
  'NatronGui/pytabwidget_wrapper.cpp',
  'NatronGui/pyviewer_wrapper.cpp',
]

moc_headers = [
  'AboutWindow.h',
  'ActionShortcuts.h',
  'AddKnobDialog.h',
  'AnimatedCheckBox.h',
  'BackdropGui.h',
  'ClickableLabel.h',
  'ColoredFrame.h',
  'ComboBox.h',
  'CurveEditor.h',
  'CurveGui.h',
  'CurveWidget.h',
  'CurveWidgetDialogs.h',
  'DockablePanel.h',
  'DockablePanelPrivate.h',
  'DocumentationManager.h',
  'DopeSheet.h',
  'DopeSheetHierarchyView.h',
  'DopeSheetView.h',
  'Edge.h',
  'EditExpressionDialog.h',
  'EditScriptDialog.h',
  'ExportGroupTemplateDialog.h',
  'FloatingWidget.h',
  'GroupBoxLabel.h',
  'Gui.h',
  'GuiAppInstance.h',
  'GuiApplicationManager.h',
  'Histogram.h',
  'InfoViewerWidget.h',
  'KnobGui.h',
  'KnobGuiBool.h',
  'KnobGuiButton.h',
  'KnobGuiChoice.h',
  'KnobGuiColor.h',
  'KnobGuiContainerHelper.h',
  'KnobGuiFile.h',
  'KnobGuiGroup.h',
  'KnobGuiParametric.h',
  'KnobGuiString.h',
  'KnobGuiTable.h',
  'KnobGuiValue.h',
  'Label.h',
  'LineEdit.h',
  'LinkToKnobDialog.h',
  'LogWindow.h',
  'ManageUserParamsDialog.h',
  'MessageBox.h',
  'MultiInstancePanel.h',
  'NewLayerDialog.h',
  'NodeCreationDialog.h',
  'NodeGraph.h',
  'NodeGui.h',
  'NodeSettingsPanel.h',
  'NodeViewerContext.h',
  'PickKnobDialog.h',
  'PreferencesPanel.h',
  'ProgressPanel.h',
  'ProgressTaskInfo.h',
  'ProjectGui.h',
  'PythonPanels.h',
  'RenderStatsDialog.h',
  'RightClickableWidget.h',
  'RotoPanel.h',
  'ScaleSliderQWidget.h',
  'ScriptEditor.h',
  'ScriptTextEdit.h',
  'SequenceFileDialog.h',
  'SpinBox.h',
  'SplashScreen.h',
  'TabGroup.h',
  'TabWidget.h',
  'TableModelView.h',
  'TimeLineGui.h',
  'ToolButton.h',
  'TrackerPanel.h',
  'VerticalColorBar.h',
  'ViewerGL.h',
  'ViewerTab.h',
  'ViewerToolButton.h',
]

gui_gen = qt4.preprocess(
  qresources: 'GuiResources.qrc',
  moc_headers: moc_headers,
  moc_extra_arguments: global_defines,
  include_directories: incs,
  dependencies: qt4_dep)

gui_lib = static_library('gui',
						 sources,
						 gui_gen,
						 include_directories: incs,
						 dependencies: [python_dep,
										shiboken_dep,
										pyside_dep,
										qt4_dep,
										qhttpserver_dep])

Gui_dep = declare_dependency(link_with: gui_lib)
